--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dependencies": {
         "clsx": "^2.0.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "recharts": "^2.12.6"
     },
     "devDependencies": {
         "@storybook/addon-essentials": "^7.2.2",
@@ -37,11 +38,13 @@
         "@vitest/coverage-v8": "^0.33.0",
         "@vitest/ui": "^0.34.1",
         "autoprefixer": "^10.4.15",
+        "dotenv": "^16.4.5",
         "eslint": "^8.44.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.1",
         "jsdom": "^22.1.0",
         "msw": "^1.2.3",
+        "node-fetch": "^3.3.2",
         "postcss": "^8.4.27",
         "storybook": "^7.2.2",
         "tailwindcss": "^3.3.3",
