--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "make:data": "node make-tech-article-data.js"
     },
     "dependencies": {
         "clsx": "^2.0.0",
