--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.10.0'
+      - name: Check env
+        run: env
       - uses: actions/cache@v4 # https://github.com/cypress-io/github-action/tree/v4.2.2#install-cypress-only
         id: node_modules_cache_id
         with:
