--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,15 +9,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      FIREBASE_DEPLOY_TOKEN: ${{ secrets.FIREBASE_DEPLOY_TOKEN }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+      GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
       QIITA_API_KEY: ${{ secrets.QIITA_API_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20.10.0'
-      - name: Check 
-        run: env
+      - name: Make .env
+        run: echo QIITA_API_KEY=${{ secrets.QIITA_API_KEY }} > .env
       - uses: actions/cache@v4 # https://github.com/cypress-io/github-action/tree/v4.2.2#install-cypress-only
         id: node_modules_cache_id
         with:
@@ -32,6 +33,9 @@ jobs:
         run: npm run build
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
+      # 認証情報を保持するjsonファイルをGOOGLE_APPLICATION_CREDENTIALSで指定したpassに生成
+      - name: make GOOGLE_APPLICATION_CREDENTIALS
+        run: echo $GCLOUD_SERVICE_KEY | base64 -d > $GOOGLE_APPLICATION_CREDENTIALS
       - name: Deploy to Firebase
         run: |
-          firebase deploy --only hosting --token $FIREBASE_DEPLOY_TOKEN
+          firebase deploy --only hosting
