--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
 name: Deploy to Firebase
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    # GHAはUTC基準なので、JST換算すると毎朝午前4時
+    - cron: '0 19 * * *'
 env:
   TZ: Asia/Tokyo
 jobs:
