--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase
 on:
   push:
     branches:
-      - masetr
+      - master
   schedule:
     # GHAはUTC基準なので、JST換算すると毎朝午前4時
     - cron: '0 19 * * *'
