--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -60,5 +60,5 @@ jobs:
           git config user.name "actions-user"
           git config user.email "action@github.com"
           git add .
-          git commit -m "Auto commit code format"
+          git commit -m "Make Articles & GitHub Contributions Data"
           git push origin ${{ github.head_ref }}
