--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "clsx": "^2.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "recharts": "^2.12.6"
+        "recharts": "^2.12.6",
+        "xml2js": "^0.6.2"
     },
     "devDependencies": {
         "@storybook/addon-essentials": "^7.2.2",
