add: hatena bookmark count
Signed-off-by: ysknsid25 <kengo071225@gmail.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,6 +35,8 @@ jobs:
         run: npm ci
       - name: Make Article Data
         run: npm run make:data
+      - name: Make Article Hate Bookmark Data
+        run: npm run make:bookmark:data
       - name: Build
         run: npm run build
       - name: Install Firebase CLI
