--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "deploy": "tsc && vite build && firebase deploy --only hosting",
+        "dev": "rsbuild dev",
+        "build": "tsc && rsbuild build",
+        "deploy": "tsc && rsbuild build && firebase deploy --only hosting",
         "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview",
+        "preview": "rsbuild preview",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
         "make:data": "node make-tech-article-data.js",
@@ -23,6 +23,8 @@
         "xml2js": "^0.6.2"
     },
     "devDependencies": {
+        "@rsbuild/core": "^1.1.13",
+        "@rsbuild/plugin-react": "^1.1.0",
         "@storybook/addon-essentials": "^7.2.2",
         "@storybook/addon-interactions": "^7.2.2",
         "@storybook/addon-links": "^7.2.2",
@@ -53,8 +55,6 @@
         "storybook": "^7.2.2",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.0.2",
-        "vite": "^4.4.0",
-        "vitest": "^0.32.4",
         "webdriverio": "^8.14.3"
     }
 }
