--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "references": [{ "path": "./tsconfig.node.json" }],
-  "exclude": ["make-hatena-bookmark.ts"],
+  "exclude": ["make-hatena-bookmark.ts", "make-all-hatena-bookmark.ts"],
 }
