リリースタイミングを修正
Signed-off-by: ysknsid25 <kengo071225@gmail.com>

--- a/.github/workflows/make-hatebu.yml
+++ b/.github/workflows/make-hatebu.yml
@@ -1,8 +1,7 @@
 name: Make Total Hatena Bookmark Data
 on:
   schedule:
-    # JST 0時の毎週月曜日に実行
-    - cron: '0 15 * * 1'
+    - cron: '0 15 * * 0' #JST 0:00
 env:
   TZ: Asia/Tokyo
 jobs:
